# YayaYum

./: README.md
yayayum-backend/: .gitignore  Cargo.toml  Shuttle.toml  copy-frontend-files.sh  postgres.dockerfile  users.db  users.txt  yayayum.db
yayayum-backend/assets/: index.html
yayayum-backend/assets/assets/: index-B5T4zqYE.css  index-BDjcnQpE.js  index-BXdDDylO.js  index-C9i7AS_S.js  index-CV5piKzP.js  index-CVcAHIad.js  index-Cb3aB5D1.js  index-D4kdSTbm.css  index-DG5csYYf.js  index-DKqTwsJr.css  index-DT7JYNkJ.css  index-DbDxTh2V.css  index-OxnYErrF.js  index-hmZIUv5B.css  index-ixedmsIL.css  index-uQLp2icd.js  index-vLaBrXdr.js
yayayum-backend/migrations/: 20241014000001_initial_schema.sql  20241015000001_add_nr_to_dishes.sql
yayayum-backend/src/: api_doc.rs  database.rs  main.rs  models.rs
yayayum-backend/src/models/: dish.rs  mod.rs  rating.rs  user.rs
yayayum-backend/src/routes/: dishes.rs  mod.rs  ratings.rs  root.rs  users.rs
yayayum-frontend/: .env.development  .env.production  Readme.md  index.html  package-lock.json  package.json
yayayum-frontend/src/: App.svelte  app.css  main.ts
yayayum-frontend/src/lib/: DishListItem.svelte  Leaderboard.svelte  ManagePage.svelte  MealActions.svelte  MealInspiration.svelte  MyRatings.svelte  Noodles.svelte  RateMeal.svelte  Users.svelte  shared.ts  types.ts
yayayum-frontend/src/lib/api/: index.ts
yayayum-frontend/src/lib/api/models/: CreateDish.ts  Dish.ts  (+6 more)
yayayum-frontend/src/lib/components/: CollapsibleSection.svelte  DietaryRestrictionSelector.svelte  DishForm.svelte  DishManagement.svelte  UserManagement.svelte  index.ts
yayayum-frontend/src/lib/pages/: MainPage.svelte
(+3 files in other folders)
