[package]
name = "yayayum-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.227", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
