[package]
name = "yayayum-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.227", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
