[package]
name = "yayayum-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
